force-app/main/default/objects/SM_OKTA_Persona__mdt/SM_OKTA_Persona__mdt.object-meta.xml
<CustomObject>
    <description>@Project : Smile
Permet d&apos;alimenter différents champs sur l&apos;utilisateur lors de sa création via Okta</description>
    <label>SM OKTA Persona</label>
    <pluralLabel>SM OKTA Persona</pluralLabel>
</CustomObject>