force-app/main/default/objects/SM_OKTA_Persona__mdt/fields/OKTA_Group__c.field-meta.xml
<CustomField>
    <fullName>OKTA_Group__c</fullName>
    <label>OKTA Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GG-APP-SMILE-Conseiller-N1-D77</fullName>
                <default>true</default>
                <label>GG-APP-SMILE-Conseiller-N1-D77</label>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Conseiller-N2-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Conseiller-N3-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Superviseur-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Hyperviseur-local-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Hyperviseur-partenaire-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Referent-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Admin-delegue-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Referent-parcours-client-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Hyperviseur-ENGIE-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-SMILE-Super-Admin-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-HARMONICA-Conseiller-Simple-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-HARMONICA-Conseiller-Acquisition-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-HARMONICA-Responsable-Equipe-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-HARMONICA-Superviseur-Site-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-HARMONICA-Referent-Smile-D77</fullName>
            </value>
            <value>
                <fullName>GG-APP-HARMONICA-Hypervision-Partenaire-D77</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>