force-app/main/default/objects/SM_OKTA_Persona__mdt/fields/SMILE_Dashboard_Homepage__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Dashboard_Homepage__c</fullName>
    <label>SMILE Dashboard Homepage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conseiller</fullName>
                <default>true</default>
                <label>Conseiller</label>
            </value>
            <value>
                <fullName>Superviseur</fullName>
            </value>
            <value>
                <fullName>Processus</fullName>
            </value>
            <value>
                <fullName>Hypervision</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>