force-app/main/default/objects/SM_OKTA_Persona__mdt/fields/SMILE_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Permission_Sets__c</fullName>
    <label>SMILE Permission Sets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>