force-app/main/default/objects/SM_OKTA_Persona__mdt/fields/SMILE_Profile__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Profile__c</fullName>
    <label>SMILE Profile</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SM_Utilisateur métier restriction maximale</fullName>
                <default>true</default>
                <label>SM_Utilisateur métier restriction maximale</label>
            </value>
            <value>
                <fullName>SM_Utilisateur métier restriction moyenne</fullName>
            </value>
            <value>
                <fullName>SM_Utilisateur métier restriction faible</fullName>
            </value>
            <value>
                <fullName>SM_Utilisateur admin métier</fullName>
            </value>
            <value>
                <fullName>SM_SystemAdmin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>