force-app/main/default/objects/SM_OKTA_Persona__mdt/fields/SMILE_Public_Groups__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Public_Groups__c</fullName>
    <label>SMILE Public Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>