force-app/main/default/objects/SM_OKTA_Persona__mdt/fields/SMILE_Queues__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Queues__c</fullName>
    <label>SMILE Queues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>