force-app/main/default/objects/SM_OKTA_Persona__mdt/fields/SMILE_Role__c.field-meta.xml
<CustomField>
    <fullName>SMILE_Role__c</fullName>
    <label>SMILE Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TrigrammePresta_TrigrammeSite_Conseiller_1</fullName>
                <default>true</default>
                <label>TrigrammePresta_TrigrammeSite_Conseiller_1</label>
            </value>
            <value>
                <fullName>TrigrammePresta_TrigrammeSite_Responsable_Equipe_1</fullName>
            </value>
            <value>
                <fullName>TrigrammePresta_TrigrammeSite</fullName>
            </value>
            <value>
                <fullName>Prestataire</fullName>
            </value>
            <value>
                <fullName>LibelleSite</fullName>
            </value>
            <value>
                <fullName>LibellePrestataire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>